--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       display:flex;
       align-items:center;
       justify-content:center;
+      font-size: large;
       flex-wrap:wrap;
     }
 
